logs_student/vector_main/vector_constructor.log
In file included from main/vector_main/fill_constructor.cpp:14:
In file included from main/vector_main/../main.hpp:22:
In file included from main/vector_main/../../.././stack/stack.hpp:14:
main/vector_main/../../.././stack/vector.hpp:46:13: error: use of undeclared identifier 'sleep'
            sleep(1);
            ^
1 error generated.
